--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.8",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "redux-saga": "^1.2.2",
     "web-vitals": "^2.1.4"
   },
